syntax = "proto3";
package glooeeapi.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/grpcserver/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "solo-kit/api/v1/ref.proto";

// "Raw" representation of a resource, e.g. yaml representation of a kube custom resource
message Raw {
    // e.g. resource-name.yaml
    string file_name = 1;
    // Content of the file
    string content = 2;
    // Error encountered while rendering content
    string content_render_error = 3;
}

message Status {
    enum Code {
        ERROR = 0;
        WARNING = 1;
        OK = 2;
    }

    // Red / Yellow / Green status of the resource
    Code code = 1;
    // Optional error message or other information about resource status
    string message = 2;
}

message EditedResourceYaml {
    string edited_yaml = 1;

    // ref for the resource being edited, to enforce that the resource's name/namespace have not been edited
    core.solo.io.ResourceRef ref = 2;
}
